[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
gloo = { version = "0.8.0" }
serde = { version = "1.0.152" }
serde_json ={ version = "1.0.91" }
stylist ={ version = "0.12.0", features = ["yew", "parser"]}